# py_ts_attrs

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/py_ts_attrs/: __init__.py  base.py  datetime.py  dto.py  enums.py  export_values.py  exportable_enum.py  field_processing.py  output.py  parse.py  proxy.py  text_utils.py  types.py  utils.py
